--- a/core/client/tpl/settings/user-profile.hbs
+++ b/core/client/tpl/settings/user-profile.hbs
@@ -7,25 +7,25 @@
 <section class="content no-padding">
     <header class="user-profile-header">
         <figure class="cover-image">
-        <img id="user-cover-picture" src="{{#if cover_picture}}{{cover_picture}}{{else}}/shared/img/default-user-cover-picture.jpg{{/if}}" title="{{full_name}} Cover Image"/>
-            <button class="button-change-cover js-modal-cover-picture">Change Cover</button>
+        <img id="user-cover" src="{{#if cover}}{{cover}}{{else}}/shared/img/default-user-cover-picture.jpg{{/if}}" title="{{name}} Cover Image"/>
+            <button class="button-change-cover js-modal-cover">Change Cover</button>
         </figure>
     </header>
     <form class="user-details-container" novalidate="novalidate">
         <fieldset class="user-details-top">
             <figure class="user-avatar-image">
-                <img id="user-profile-picture" src="{{#if profile_picture}}{{profile_picture}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" title="{{full_name}}"/>
-                <button class="button-change-avatar js-modal-profile-picture">Edit Picture</button>
+                <img id="user-image" src="{{#if image}}{{image}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" title="{{name}}"/>
+                <button class="button-change-avatar js-modal-image">Edit Picture</button>
             </figure>
             <label>
-                <input type="url" value="{{full_name}}" id="user-name" placeholder="Joe Bloggs" autocapitalize="off" autocorrect="off">
+                <input type="url" value="{{name}}" id="user-name" placeholder="Joe Bloggs" autocapitalize="off" autocorrect="off">
                 <p>Use your real name so people can recognise you.</p>
             </label>
         </fieldset>
         <fieldset class="user-details-bottom">
             <div class="form-group">
                 <label><strong>Email</strong></label>
-                <input type="email" value="{{email_address}}" id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off">
+                <input type="email" value="{{email}}" id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off">
                 <p>Email will not be publicly displayed. <a class="highlight" href="#" >Learn more</a>.</p>
             </div>
 
@@ -37,7 +37,7 @@
 
             <div class="form-group">
                 <label><strong>Website</strong></label>
-                <input type="text" value="{{url}}" id="user-website">
+                <input type="text" value="{{website}}" id="user-website">
                 <p>Have a website or blog other than this one? Link it.</p>
             </div>
 
