--- a/ghost/admin/tpl/settings/user-profile.hbs
+++ b/ghost/admin/tpl/settings/user-profile.hbs
@@ -4,69 +4,77 @@
         <button class="button-save">Save</button>
     </section>
 </header>
+
 <section class="content no-padding">
+
     <header class="user-profile-header">
-        <figure class="cover-image">
-        <img id="user-cover" src="{{#if cover}}{{cover}}{{else}}/shared/img/default-user-cover-picture.jpg{{/if}}" title="{{name}} Cover Image"/>
-            <button class="button-change-cover js-modal-cover">Change Cover</button>
-        </figure>
+        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}/shared/img/cover.png{{/if}}" title="{{name}}'s Cover Image"/>
+        <button class="edit-cover-image js-modal-cover">Change Cover</button>
     </header>
-    <form class="user-details-container" novalidate="novalidate">
+
+    <form class="user-profile" novalidate="novalidate">
+
         <fieldset class="user-details-top">
-            <figure class="user-avatar-image">
-                <img id="user-image" src="{{#if image}}{{image}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" title="{{name}}"/>
-                <button class="button-change-avatar js-modal-image">Edit Picture</button>
+
+            <figure class="user-image">
+                <img id="user-image" src="{{#if image}}{{image}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" title="{{name}}" />
+                <button class="edit-user-image js-modal-image">Edit Picture</button>
             </figure>
-            <label>
-                <input type="url" value="{{name}}" id="user-name" placeholder="Joe Bloggs" autocapitalize="off" autocorrect="off">
-                <p>Use your real name so people can recognise you.</p>
-            </label>
-        </fieldset>
-        <fieldset class="user-details-bottom">
+
             <div class="form-group">
-                <label><strong>Email</strong></label>
-                <input type="email" value="{{email}}" id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off">
-                <p>Email will not be publicly displayed. <a class="highlight" href="#" >Learn more</a>.</p>
+                <label for="user-name" class="hidden">Full Name</label>
+                <input type="url" value="{{name}}" id="user-name" placeholder="Full Name" autocorrect="off" />
+                <p>Use your real name so people can recognise you</p>
+            </div>
+
+        </fieldset>
+
+        <fieldset class="user-details-bottom">
+
+            <div class="form-group">
+                <label for"user-email">Email</label>
+                <input type="email" value="{{email}}" id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off" />
+                <p>Used for notifications</p>
             </div>
 
             <div class="form-group">
-                <label><strong>Location</strong></label>
-                <input type="text" value="{{location}}" id="user-location">
+                <label for="user-location">Location</label>
+                <input type="text" value="{{location}}" id="user-location" />
                 <p>Where in the world do you live?</p>
             </div>
 
             <div class="form-group">
-                <label><strong>Website</strong></label>
-                <input type="text" value="{{website}}" id="user-website">
-                <p>Have a website or blog other than this one? Link it.</p>
+                <label for="user-website">Website</label>
+                <input type="text" value="{{website}}" id="user-website" autocapitalize="off" autocorrect="off" />
+                <p>Have a website or blog other than this one? Link it!</p>
             </div>
 
             <div class="form-group bio-container">
-                <label><strong>Bio</strong></label>
+                <label for="user-bio">Bio</label>
                 <textarea id="user-bio">{{bio}}</textarea>
-                <p class="bio-desc">Write about you, in <strong>200</strong> characters or less.</p>
-                <span class="word-count">97</span>
+                <p class="bio-desc">Write about you, in 200 characters or less.</p>
+                <span class="word-count">0</span>
             </div>
 
-            <hr>
+            <hr />
 
         </fieldset>
 
-        <fieldset class="user-details-bottom">
+        <fieldset>
 
             <div class="form-group">
-                <label><strong>Old Password</strong></label>
-                <input type="password" id="user-password-old">
+                <label for="user-password-old">Old Password</label>
+                <input type="password" id="user-password-old" />
             </div>
 
             <div class="form-group">
-                <label><strong>New Password</strong></label>
-                <input type="password" id="user-password-new">
+                <label for="user-password-new">New Password</label>
+                <input type="password" id="user-password-new" />
             </div>
 
             <div class="form-group">
-                <label><strong>Verify Password</strong></label>
-                <input type="password" id="user-new-password-verification">
+                <label for="user-new-password-verification">Verify Password</label>
+                <input type="password" id="user-new-password-verification" />
             </div>
             <div class="form-group">
                 <button class="button-delete button-change-password">Change Password</button>
