Renamed the notifications container
Renamed from `#flashbar` to `#notifications`

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -889,7 +889,7 @@ nav {
    Notifications
    ========================================================================== */
 
-#flashbar {
+#notifications {
     @include breakpoint($mobile) {
         position: fixed;
         top: 0;
