--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -26,7 +26,7 @@
         {{/unless}}
 
         <main role="main" id="main">
-            <aside id="flashbar">
+            <aside id="notifications">
                 {{> notifications}}
             </aside>
 
