--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 
 <header id="global-header" class="navbar">
-    <a class="ghost-logo" href="http://vip.tryghost.org" data-off-canvas="left"><span class="hidden">Ghost</span></a>{{! TODO: Change this to actual Ghost homepage }}
+    <a class="ghost-logo" href="{{url absolute="true"}}" data-off-canvas="left"><span class="hidden">Ghost </span></a>{{! TODO: Change this to actual Ghost homepage }}
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
             {{#each adminNav}}
