--- a/core/server/views/partials/notifications.hbs
+++ b/core/server/views/partials/notifications.hbs
@@ -2,7 +2,7 @@
     {{#each messages}}
         <div class="js-bb-notification">
             <section class="notification{{#if type}}-{{type}}{{/if}} notification-{{status}} js-notification">
-              {{message}}
+              {{{message}}}
               <a class="close" href="#" data-id="{{id}}"><span class="hidden">Close</span></a>
             </section>
         </div>
